--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 			<version>2.6.1</version>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>io.springfox</groupId>
